src/objects/Consult_Form__c.object
<CustomObject>
    <fields>
        <fullName>Accompanied_By__c</fullName>
        <label>Accompanied By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Accompanied</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accompanied_by_Name__c</fullName>
        <label>Accompanied by Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Consult Forms</relationshipLabel>
        <relationshipName>Consult_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approve_Consult__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approve Consult</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approve_Nothing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approve Nothing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approve_Panoramic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approve Panoramic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approve_iCat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approve iCat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMOC_Daytime_VM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BMOC Daytime VM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMOC_Daytime__c</fullName>
        <label>BMOC Daytime</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BMOC_Evening_VM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BMOC Evening VM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMOC_Evening__c</fullName>
        <label>BMOC Evening</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BMOC_Weekend_VM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BMOC Weekend VM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMOC_Weekend__c</fullName>
        <label>BMOC Weekend</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Business_Phone__c</fullName>
        <label>Business Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dentist_Name__c</fullName>
        <label>Dentist Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discuss_Medical_Care_Name_1__c</fullName>
        <label>Discuss Medical Care Name 1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discuss_Medical_Care_Name_2__c</fullName>
        <label>Discuss Medical Care Name 2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discuss_Medical_Care_Relationship_1__c</fullName>
        <label>Discuss Medical Care Relationship 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discuss_Medical_Care_Relationship_2__c</fullName>
        <label>Discuss Medical Care Relationship 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <label>Employer</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_Family_Dentist__c</fullName>
        <label>Have Family Dentist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_is_dental_condition_affecting_you__c</fullName>
        <label>How is dental condition affecting you?</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_soon_would_you_like_to_start__c</fullName>
        <label>How soon would you like to start</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_would_treatment_change_your_life__c</fullName>
        <label>How would treatment change your life</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Dentist_Visit__c</fullName>
        <label>Last Dentist Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Consult Forms</relationshipLabel>
        <relationshipName>Consult_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Main_Dental_Concern__c</fullName>
        <label>Main Dental Concern</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major_Medical_Problem_What__c</fullName>
        <label>Major Medical Problem What</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major_Medical_Problem__c</fullName>
        <label>Major Medical Problem</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Periodontal_Gum_Disease__c</fullName>
        <label>Periodontal Gum Disease</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PersonMailingCity__c</fullName>
        <label>PersonMailingCity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonMailingPostalCode__c</fullName>
        <label>PersonMailingPostalCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonMailingState__c</fullName>
        <label>PersonMailingState</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Guam</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PersonMailingStreet__c</fullName>
        <label>PersonMailingStreet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonMobilePhone__c</fullName>
        <label>PersonMobilePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pregnant__c</fullName>
        <label>Pregnant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prescribed_Bisphosphonates__c</fullName>
        <label>Prescribed Bisphosphonates</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taking_Bisphosphonates__c</fullName>
        <label>Taking Bisphosphonates</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Consult Form</label>
    <nameField>
        <label>Consult Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consult Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>